--- a/css/resume.css
+++ b/css/resume.css
@@ -109,6 +109,21 @@ p.lead {
     width: 17rem;
     height: 100vh;
   }
+  #rightBar {
+    position: fixed;
+    top: 0;
+    left: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 17rem;
+    height: 100vh;
+  }
   #sideNav .navbar-brand {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -152,7 +167,7 @@ p.lead {
 section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
-  max-width: 75rem;
+  max-width: 60rem;
 }
 
 section.resume-section .resume-item .resume-date {
@@ -176,15 +191,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #4d0028 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #4d0028 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #4d0028;
 }
 
 a:hover, a:focus, a:active {
