Adjust min. section height only for NCR work term page

--- a/css/resume.css
+++ b/css/resume.css
@@ -170,6 +170,10 @@ section.resume-section {
   max-width: 60rem;
 }
 
+section.resume-section-main {
+  max-width: 60rem;
+}
+
 section.resume-section .resume-item .resume-date {
   min-width: none;
 }
@@ -177,6 +181,9 @@ section.resume-section .resume-item .resume-date {
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh;
+  }
+  section.resume-section-main {
+    min-height: 60vh;
   }
   section.resume-section .resume-item .resume-date {
     min-width: 18rem;
